--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     </div>
 
     <!-- Подключение основного файла логики приложения -->
-    <script src="public/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
 
