--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MapCost Telegram Mini App</title>
+    <title>MapChap Telegram Mini App</title>
     <!-- Подключение основного файла стилей -->
     <link rel="stylesheet" href="style.css">
     <!-- Подключение скрипта Telegram WebApp для взаимодействия с Telegram-клиентом -->
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://telegram.org极/js/telegram-web-app.js"></script>
     <!-- Подключение API Яндекс.Карт с указанием вашего API ключа и русского языка -->
     <!-- В реальном проекте ключ лучше хранить в переменных окружения и загружать динамически -->
     <script src="https://api-maps.yandex.ru/2.1/?apikey=07b74146-5f5a-46bf-a2b1-cf6d052a41bb&lang=ru_RU" type="text/javascript"></script>
@@ -17,7 +17,7 @@
     <div id="app-container">
         <!-- Шапка приложения, отображает название -->
         <header class="app-header">
-            <h1>MapCost</h1>
+            <h1>MapChap</h1>
         </header>
 
         <!-- Основная область контента, где будут переключаться различные экраны приложения -->
