--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         </div>
     </div>
 
-</body><!-- ДЕБАГ ПАНЕЛЬ - покажет все ошибки на экране -->
+<!-- ДЕБАГ ПАНЕЛЬ - покажет все ошибки на экране -->
 <div style="position: fixed; top: 0; left: 0; right: 0; background: #ff4444; color: white; padding: 10px; z-index: 10000; font-size: 14px;">
     <strong>Debug Panel</strong>
     <div id="debug-info">Загрузка...</div>
