--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <!-- Подключение основного файла стилей -->
     <link rel="stylesheet" href="style.css">
     <!-- Подключение скрипта Telegram WebApp для взаимодействия с Telegram-клиентом -->
-    <script src="https://telegram.org极/js/telegram-web-app.js"></script>
+ 
+     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <!-- Подключение API Яндекс.Карт с указанием вашего API ключа и русского языка -->
     <!-- В реальном проекте ключ лучше хранить в переменных окружения и загружать динамически -->
-    <script src="https://api-maps.yandex.ru/2.1/?apikey=07b74146-5f5a-46bf-a2b1-cf6d052a41bb&lang=ru_RU" type="text/javascript"></script>
+     <script src="https://api-maps.yandex.ru/2.1/?apikey=07b74146-515a-46bf-a2b1-cf6d052a41bb&lang=ru_RU" type="text/javascript"></script>
 </head>
 <body>
     <!-- Основной контейнер всего приложения -->
@@ -37,7 +38,7 @@
                     </div>
                 </div>
                 <!-- Контейнер, в котором будет инициализирована Яндекс.Карта -->
-                <div id="map-container"></div>
+                <div id="map" style="width: 100%; height: 400px; background: #f0f0f0;"></div>
             </section>
 
             <!-- Экран регистрации для предпринимателей -->
